@@ -22,20 +22,6 @@
  */
 class CMssqlCommandBuilder extends CDbCommandBuilder
 {
-   	/**
-	 * Returns the last insertion ID for the specified table.
-	 * Override parent implemantation since PDO mssql driver does not provide this method
-	 * @param CDbTableSchema the table metadata
-	 * @return mixed last insertion id. Null is returned if no sequence name.
-	 */
-	public function getLastInsertID($table)
-	{
-		if($table->sequenceName!==null)
-			return $this->getDbConnection()->createCommand('SELECT SCOPE_IDENTITY()')->queryScalar();
-		else
-			return null;
-	}
-
 	/**
 	 * Creates a COUNT(*) command for a single table.
 	 * Override parent implementation to remove the order clause of criteria if it exists
