@@ -27,7 +27,10 @@ class CMssqlPdoAdapter extends PDO
 	 */
 	public function lastInsertId ($sequence=NULL)
 	{
-		return $this->query('SELECT SCOPE_IDENTITY()')->fetchColumn();
+		if(strcasecmp($this->getAttribute(PDO::ATTR_DRIVER_NAME),'sqlsrv')
+			return $this->query('SELECT SCOPE_IDENTITY()')->fetchColumn();
+		else
+			return parent::lastInsertId($sequence);
 	}
 
 	/**
